--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.79"
 clap = { version = "4.4.18", features = ["derive"] }
+embedded-graphics = "0.8.1"
+itertools = "0.12.0"
 rusb = "0.9.3"
