--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.79"
+cairo-rs = "0.18.5"
 clap = { version = "4.4.18", features = ["derive"] }
 embedded-graphics = "0.8.1"
 itertools = "0.12.0"
