--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ anyhow = "1.0.79"
 cairo-rs = "0.18.5"
 clap = { version = "4.4.18", features = ["derive"] }
 embedded-graphics = "0.8.1"
+hidapi = { version = "2.4.1" }
 itertools = "0.12.0"
 rusb = "0.9.3"
