--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.79"
 cairo-rs = "0.18.5"
+colorgrad = "0.6.2"
 clap = { version = "4.4.18", features = ["derive"] }
 embedded-graphics = "0.8.1"
 hidapi = { version = "2.4.1" }
 itertools = "0.12.0"
 rusb = "0.9.3"
+strum = { version = "0.25.0", features = ["derive"] }
