--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,8 @@ embedded-graphics = "0.8.1"
 hidapi = { version = "2.4.1" }
 itertools = "0.12.0"
 rusb = "0.9.3"
-strum = { version = "0.25.0", features = ["derive"] }
+strum = { version = "0.26.1", features = ["derive"] }
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
 uuid = { version = "1.7.0", features = ["serde"] }
+uom = { version = "0.35.0", features = ["serde"] }
