--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,6 @@ rusb = "0.9.3"
 strum = { version = "0.26.1", features = ["derive"] }
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
+simetry = { path = "../simetry/" }
 uuid = { version = "1.7.0", features = ["serde"] }
 uom = { version = "0.35.0", features = ["serde"] }
