--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,6 @@ strum = { version = "0.26.1", features = ["derive"] }
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
 simetry = { path = "../simetry/" }
+tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"]}
 uuid = { version = "1.7.0", features = ["serde"] }
 uom = { version = "0.35.0", features = ["serde"] }
