--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ itertools = "0.12.0"
 rusb = "0.9.3"
 strum = { version = "0.26.1", features = ["derive"] }
 serde = { version = "1.0.195", features = ["derive"] }
-serde_json = "1.0.111"
+serde_json = { version = "1.0.111", features = ["raw_value"] }
 simetry = { path = "../simetry/" }
 tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"]}
 uuid = { version = "1.7.0", features = ["serde"] }
