--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,4 +25,4 @@ uuid = { version = "1.7.0", features = ["serde"] }
 uom = { version = "0.35.0", features = ["serde"] }
 
 [dev-dependencies]
-assert_matches2 = "0.1.2"
+similar-asserts = "1.5.0"
